--- a/BIN1/server/compose.yml
+++ b/BIN1/server/compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       PORT: 3000
       DATABASE_URL: "mysql://root:password@db/app"
+      JWT_SECRET: "secret"
 
   db:
     image: mysql:latest
