--- a/BIN1/server/compose.yml
+++ b/BIN1/server/compose.yml
@@ -11,6 +11,8 @@ services:
       PORT: 3000
       DATABASE_URL: "mysql://root:password@db/app"
       JWT_SECRET: "secret"
+    depends_on:
+      - db
 
   db:
     image: mysql:latest
